# Password-Strength

./: .gitignore  README.md  TUTORIAL.md  mypy.ini  pyproject.toml  ruff.toml
docs/: feature_scope.md  pipeline_notes.md  project_conventions.md
password_strength/: __init__.py  cli.py  cli.py.py  conventions.py  dictionary.py  exceptions.py  exporters.py  feedback.py  input_loader.py  models.py  passwords.py  patterns.py  pattterns.py  policy.py  resources.py  sanitizer.py  scope.py  scoring.py
password_strength/cli/: __init__.py  _shared.py  password_audit.py  password_export.py  password_score.py  password_validate.py
password_strength/data/: __init__.py  banned_tokens.txt  common_passwords.txt  keyboard_patterns.txt
password_strength/data/policies/: default.json  strict.json
resources/: banned_tokens.txt  common_passwords.txt  keyboard_patterns.txt
resources/policies/: default.json  strict.json
tests/: __init__.py  test_cli_commands.py  test_cli_pipeline_integration.py  test_conventions.py  test_exceptions.py  test_imports.py  test_input_loader.py  test_models.py  test_passwords_orchestrator.py  test_resources.py  test_sanitizer.py  test_scope.py  test_smoke.py  test_v1_features.py  tests_resources.py
