[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-strength-architect"
version = "0.1.0"
description = "Enterprise-grade CLI password auditing and strength analysis tool."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Princeton" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[project.scripts]
password-architect = "password_strength.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["password_strength*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]